@@ -1,1 +1,0 @@
-A GMPC plugin that fetches cover art and artist images from last.fm.
